# openpocus

./: .gitignore  CMakeLists.txt
data/: config.xml  shareware.fat  shareware_exe.fat
src/: apogeesplash.cpp  apogeesplash.h  definitions.h  introsplash.cpp  introsplash.h  main.cpp  mainmenu.cpp  mainmenu.h  openpocus.cpp  openpocus.h  stategame.cpp  stategame.h  version.h
src/engine/: animation.cpp  animation.h  audio.h  color.h  config.cpp  config.h  definitions.h  entity.cpp  entity.h  eventhandler.h  fade.cpp  fade.h  game.cpp  game.h  hocus.cpp  hocus.h  hud.cpp  hud.h  log.cpp  log.h  map.cpp  map.h  menu.cpp  menu.h  musicplayer.cpp  musicplayer.h  particles.cpp  particles.h  player.cpp  player.h  pocusengine.cpp  pocusengine.h  point.cpp  point.h  projectile.cpp  projectile.h  rect.cpp  rect.h  renderer.h  size.cpp  (+6 more)
src/engine/data/: data.cpp  data.h  datafile.cpp  datafile.h  datamanager.cpp  datamanager.h  fat.cpp  fat.h  fatloader.cpp  fatloader.h
src/engine/data/asset/: asset.h  font.cpp  font.h  image.cpp  image.h  iteminfo.cpp  iteminfo.h  level.cpp  level.h  levelbackground.cpp  levelbackground.h  leveltileset.cpp  leveltileset.h  leveltime.cpp  leveltime.h  midi.cpp  midi.h  palette.cpp  palette.h  pcx.cpp  pcx.h  spriteset.cpp  spriteset.h  voc.cpp  voc.h
src/engine/provider/: provider.cpp  provider.h
src/engine/sdl/: sdlaudio.cpp  sdlaudio.h  sdleventhandler.cpp  sdleventhandler.h  sdlrenderer.cpp  sdlrenderer.h  sdlsound.cpp  sdlsound.h  sdltexture.cpp  sdltexture.h
tools/: dat_extractor.c  fat_extractor.c  fat_finder.c  palette_extractor.c
